# cpp-fix-gateway

./: .env.example  .gitignore  CMakeLists.txt  Makefile  main.cpp
scripts/: logon.cpp
src/: main.cpp
src/decoders/: FixDecoder.cpp  FixDecoder.h
src/engines/: FixEngine.cpp  FixEngine.h
src/environment/: Environment.cpp  Environment.h
src/interactions/: ServiceLogonInteraction.cpp  ServiceLogonInteraction.h
src/models/: FixMessage.h  FixTags.h
src/socket/: Socket.cpp  Socket.h
src/utils/: StringUtils.h
tests/decoders/: FixDecoder_Test.cpp
tests/socket/: Socket_Test.cpp
